--- a/frontend/src/pages/EditBook.css
+++ b/frontend/src/pages/EditBook.css
@@ -1,38 +1,41 @@
+
 .edit-book-container {
+    background-color: rgba(0, 0, 0, 0.8); /* Fundo preto transparente */
+    color: #ffffff; /* Texto branco */
+    padding: 2rem;
+    border-radius: 5px; /* Borda arredondada */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); /* Sombra preta */
+    width: 100%;
+    max-width: 500px; /* Limita a largura do formulário */
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('fundo.jpeg'); 
 }
-
 h2.text-center {
-    text-align: center;
+    text-align: left;
     margin-bottom: 1rem;
-    background-color: black;
-    color: aliceblue;
+    color: rgb(255, 255, 255);
     padding: 10px;
-    border-radius: 3px;
+    border-radius: 1px;
 }
 
 .form-horizontal {
     width: 100%;
-    max-width: 600px; /* Limita a largura do formulário */
+    max-width: 500px; /* Limita a largura do formulário */
 }
 
 .form-group {
-    text-align: center;
+    text-align: left;
     margin-bottom: 10px;
     padding: 2px;
-    background-color: rgb(42, 192, 192);
 }
 
 .form-group label {
-    color: rgb(3, 0, 0); /* Texto preto */
-    background-color: #007bff;
+    color: rgb(255, 255, 255); /* Texto branco */
     padding: 5px;
-    border-radius: 3px;
+    border-radius: 1px;
     display: block;
-    text-align: center;
+    text-align: left;
     font-weight: bold; /* Deixa o texto em negrito */
 }
 
@@ -45,4 +48,10 @@ button.btn-primary {
     width: 100%;
     max-width: 200px; /* Limita a largura do botão */
     margin: 1rem auto 10px auto;
+    background-color: rgb(177, 188, 197);
+    border: black;
+}
+button.btn-primary:hover{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
